# legal-rag-chatbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HANDOFF_TEMPLATE.md  LEARNING-ROADMAP.md  Makefile  PRODUCTION_ROADMAP.md  PROJECT_MEMORY.md  README.md  RELEASE.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  main.py  observability.py  security.py
data/: README.md  bo-luat-lao-dong-2019.txt  luat-dau-tu-2020.txt  luat-doanh-nghiep-2020.txt  luat-thue-thu-nhap-ca-nhan-109-2025-qh15.txt  nghi-dinh-65-2013-nd-cp-thue-thu-nhap-ca-nhan.txt  nghi-quyet-110-2025-ubtvqh15-giam-tru-gia-canh.txt  nghia-vu-quan-su-2015.txt  nghia-vu-quan-su-curated-luat-hop-nhat-80-2025.txt  nghia-vu-quan-su-curated-suc-khoe-hop-nhat-88-2025.txt  nghia-vu-quan-su-curated-xu-phat-hop-nhat-04-2022.txt  nghia-vu-quan-su-kham-suc-khoe-105-2023.txt  nghia-vu-quan-su-xu-phat-120-2013-37-2022.txt  thong-tu-111-2013-tt-btc-thue-thu-nhap-ca-nhan.txt  vbhn-thue-thu-nhap-ca-nhan-2007-2012.txt
evals/: README.md  legal_quality_cases.json
scripts/: backup_data.sh  generate_eval_candidates.py  import_military_docs.py  import_worker_tax_docs.py  migrate_db.sh  restore_data.sh  smoke_test.sh
streamlit_app/: Home.py  utils.py
tests/: conftest.py  test_api_chat.py  test_api_documents.py  test_citation.py  test_config.py  test_edge_cases.py  test_eval_generator.py  test_health.py  test_legal.py  test_maintenance.py  test_migrations.py  test_military_service.py  test_parser.py  test_quality_eval.py  test_resilience.py
(+41 files in other folders)
