[project]
name = "chat-bot-rag-full"
version = "0.2.0"
description = "Vietnamese legal RAG chatbot built from the learning roadmap"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "streamlit>=1.42.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "qdrant-client>=1.12.0",
  "beautifulsoup4>=4.12.3",
  "pypdf>=5.1.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
